--- a/style.css
+++ b/style.css
@@ -48,6 +48,18 @@ li {color:red}
   
 }
 
+.space{
+  margin-top: 20px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 20px;
+}
+
+.ctext{
+  color:blueviolet;
+  text-align: center;
+}
+
 /*.portmarg{
   margin-top: 0px;
   margin-right: 700px;
